# model_role_binding.go
@@ -16,7 +16,6 @@ import (
 
 // RoleBinding struct for RoleBinding
 type RoleBinding struct {
-	Namespace *string `json:"namespace,omitempty"`
 	Role *string `json:"role,omitempty"`
 	Principal *string `json:"principal,omitempty"`
 }
@@ -36,38 +35,6 @@ func NewRoleBinding() *RoleBinding {
 func NewRoleBindingWithDefaults() *RoleBinding {
 	this := RoleBinding{}
 	return &this
-}
-
-// GetNamespace returns the Namespace field value if set, zero value otherwise.
-func (o *RoleBinding) GetNamespace() string {
-	if o == nil || isNil(o.Namespace) {
-		var ret string
-		return ret
-	}
-	return *o.Namespace
-}
-
-// GetNamespaceOk returns a tuple with the Namespace field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *RoleBinding) GetNamespaceOk() (*string, bool) {
-	if o == nil || isNil(o.Namespace) {
-    return nil, false
-	}
-	return o.Namespace, true
-}
-
-// HasNamespace returns a boolean if a field has been set.
-func (o *RoleBinding) HasNamespace() bool {
-	if o != nil && !isNil(o.Namespace) {
-		return true
-	}
-
-	return false
-}
-
-// SetNamespace gets a reference to the given string and assigns it to the Namespace field.
-func (o *RoleBinding) SetNamespace(v string) {
-	o.Namespace = &v
 }
 
 // GetRole returns the Role field value if set, zero value otherwise.
@@ -136,9 +103,6 @@ func (o *RoleBinding) SetPrincipal(v string) {
 
 func (o RoleBinding) MarshalJSON() ([]byte, error) {
 	toSerialize := map[string]interface{}{}
-	if !isNil(o.Namespace) {
-		toSerialize["namespace"] = o.Namespace
-	}
 	if !isNil(o.Role) {
 		toSerialize["role"] = o.Role
 	}
